# fast_cgi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  FastCGI Specification.html  LICENSE  README.md  config.hpp.in  log.hpp.in
examples/: hello_world.cpp
fast_cgi/: allocator.hpp  buffer.hpp  buffer_manager.hpp  buffer_reader.hpp  byte_stream.hpp  connection.hpp  connection_reader.hpp  connector.hpp  fast_cgi.hpp  handler.hpp  log.hpp  output_manager.hpp  params.hpp  protocol.hpp  reader.hpp  request.hpp  request_manager.hpp  role.hpp  service.hpp  simple_allocator.hpp  task_distributor.hpp  writer.hpp
fast_cgi/detail/: config.hpp  params.hpp  record.hpp  request.hpp  request_manager.hpp
fast_cgi/exception/: fastcgi_error.hpp  fastcgi_exception.hpp  interrupted_error.hpp  interrupted_exception.hpp  invalid_role_error.hpp  invalid_role_exception.hpp  io_error.hpp  io_exception.hpp
fast_cgi/io/: byte_stream.hpp  input_manager.hpp  output_manager.hpp  reader.hpp  writer.hpp
fast_cgi/manipulator/: manipulators.hpp
fast_cgi/memory/: allocator.hpp  buffer.hpp  buffer_manager.hpp  simple_allocator.hpp
src/: service.cpp
src/detail/: params.cpp  request_manager.cpp
src/io/: byte_stream.cpp  input_manager.cpp  output_manager.cpp  reader.cpp
src/memory/: buffer.cpp  buffer_manager.cpp
